# DGLD4Energetic

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  LICENSE-DATA  README.md  index.html  pyproject.toml  requirements-train.txt  requirements.txt
data/: README.md
data/experiments/: final_merged_topN.md
dgld/: README.md  __init__.py
docs/: CHANGELOG.md  CONTRIBUTING.md  DESIGN_NOTES.md  README.md  REPRODUCIBILITY.md  TROUBLESHOOTING.md
experiments/: README.md
experiments/baselines_reinvent/results/: reinvent_40k_raw.txt
experiments/cj_validation/results/: m10_cj_validation.json
experiments/gaussian_control/results/: gaussian_latent_40k_raw.txt
figures/: README.md
models/: README.md  denoiser_dgld_h.pt.sidecar  denoiser_dgld_p.pt.sidecar  denoiser_v4b_seed1.pt.sidecar  denoiser_v4b_seed2.pt.sidecar  denoiser_v4b_seed42.pt.sidecar  limo_vae.pt.sidecar  random_forest_viability.pkl.sidecar  score_model_5head.pt.sidecar  score_model_6head.pt.sidecar  smoke_ensemble_fold1.pt.sidecar  smoke_ensemble_fold2.pt.sidecar
paper/: ExtendedDataTable1.docx  NMIPaper.docx  NMIPaper.html  NMIPaperSI.docx  NMIPaperSI.html  README.md  _split_html.py  cover_letter.html  short_paper.docx  short_paper.html  short_paper_SI.docx
scripts/: README.md  generate_readme_hero.py  plot_cfg_sweep.py  plot_fig1.py  plot_fig21.py  plot_fig22.py  plot_fig23.py  plot_fig_forest_ablation.py  plot_head_sweep.py  plot_lead_cards_grid.py  plot_merged_provenance.py  plot_moses_panels.py  plot_pipeline_overview.py  plot_pool_scaling.py  plot_self_distillation.py
